--- a/CryptoRates/Views/Shared/_Layout.cshtml
+++ b/CryptoRates/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pairs" asp-action="All">Currencies</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pairs" asp-action="MyPairs">Pairs</a>
                         </li>
                     </ul>
                 </div>
@@ -44,6 +44,7 @@
             &copy; 2020 - CryptoRates - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="~/js/pagination.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
