Working on adding new pairs

--- a/CryptoRates/ClientApp/src/app/pairs/pairs.component.html
+++ b/CryptoRates/ClientApp/src/app/pairs/pairs.component.html
@@ -2,6 +2,8 @@
 
 <p *ngIf="!pairs"><em>Loading...</em></p>
 
+<app-add-edit-pair></app-add-edit-pair>
+
 <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="pairs; else caseNoPairs">
   <ng-template #caseNoPairs>Oops, no pairs yet</ng-template>
   <thead>
