Nothing to see here

--- a/CryptoRates/ClientApp/src/app/add-edit-pair/add-edit-pair.component.html
+++ b/CryptoRates/ClientApp/src/app/add-edit-pair/add-edit-pair.component.html
@@ -1,20 +1,22 @@
 <form class="new-pair-form">
   <mat-form-field class="example-full-width">
     <mat-label>First coin</mat-label>
-    <input #firstCurrencyName type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+    <input #firstCurrencyName type="text" matInput [formControl]="firstCurrencyControl" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-      <mat-option *ngFor="let currency of filteredCurrencies | async" [value]="currency.name">
-        <img src="{{currency.image}}" width="20" height="20" />|{{currency.name}} ({{currency.symbol}})
+      <mat-option *ngFor="let currency of firstFilteredCurrencies | async" [value]="currency.name">
+        <img [src]="currency.imageURL" width="20" height="20" />|{{currency.name}} ({{currency.symbol}})
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
 
+
+  <!--If you uncomment this - autocomplete breaks-->
   <mat-form-field class="example-full-width">
     <mat-label>Second coin</mat-label>
-    <input #secondCurrencyName  type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let currency of filteredCurrencies | async" [value]="currency.name">
-        <img src="{{currency.image}}" width="20" height="20" />|{{currency.name}} ({{currency.symbol}})
+    <input #secondCurrencyName type="text" matInput [formControl]="secondCurrencyControl" [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+      <mat-option *ngFor="let currency of secondFilteredCurrencies | async" [value]="currency.name">
+        <img [src]="currency.imageURL" width="20" height="20" />|{{currency.name}} ({{currency.symbol}})
       </mat-option>
     </mat-autocomplete>
   </mat-form-field>
@@ -25,4 +27,14 @@
   </mat-form-field>
 
   <button mat-stroked-button (click)="onClickAddPair(firstCurrencyName.value, secondCurrencyName.value, targetPrice.value)">Add</button>
+
+  <div class="alert alert-danger"
+       *ngIf="firstCurrencyControl.invalid && firstCurrencyControl.touched">
+    You must write a full name of the first currency, or just choose from the dropdown
+  </div>
+
+  <!--<div class="alert alert-danger"
+       *ngIf="secondCurrencyControl.invalid && secondCurrencyControl.touched">
+    You must write a full name of the second currency, or just choose from the dropdown
+  </div>-->
 </form>
