--- a/CryptoRates/ClientApp/src/app/pairs/pairs.component.html
+++ b/CryptoRates/ClientApp/src/app/pairs/pairs.component.html
@@ -16,8 +16,8 @@
   </thead>
   <tbody>
     <tr *ngFor="let pair of pairs">
-      <td><img [src]="pair.firstCurrencyImageUrl" width="20" height="20" /> {{ pair.firstCurrencySymbol }}</td>
-      <td><img [src]="pair.secondCurrencyImageUrl" width="20" height="20" /> {{ pair.secondCurrencySymbol }}</td>
+      <td><img [src]="pair.firstCurrency.imageURL" width="20" height="20" /> {{ pair.firstCurrency.symbol }}</td>
+      <td><img [src]="pair.secondCurrency.imageURL" width="20" height="20" /> {{ pair.secondCurrency.symbol }}</td>
       <td *ngIf="pair.priceFirstToSecond; else noPriceYet">{{ pair.priceFirstToSecond }}</td>
       <ng-template #noPriceYet><td>No price yet, wait a minute</td></ng-template>
       <td *ngIf="pair.isNotifyOnPrice; else emptyTargetPrice">{{ pair.targetPrice }}</td>
