--- a/CryptoRates/ClientApp/src/app/chart/chart.component.html
+++ b/CryptoRates/ClientApp/src/app/chart/chart.component.html
@@ -1,1 +1,1 @@
-<div id="chartContainer"></div>
+<div [id]="chartId" style="margin-left: auto; margin-right: auto; width: inherit; height: 50px"></div>
