--- a/CryptoRates/ClientApp/src/app/pairs/pairs.component.html
+++ b/CryptoRates/ClientApp/src/app/pairs/pairs.component.html
@@ -12,6 +12,7 @@
       <th>Second coin (S)</th>
       <th>Current price (F/S)</th>
       <th>Target price</th>
+      <th>24-hour price</th>
     </tr>
   </thead>
   <tbody>
@@ -22,8 +23,7 @@
       <ng-template #noPriceYet><td>No price yet, wait a minute</td></ng-template>
       <td *ngIf="pair.isNotifyOnPrice; else emptyTargetPrice">{{ pair.targetPrice }}</td>
       <ng-template #emptyTargetPrice><td>No target price is set</td></ng-template>
-      <!--An attempt to make a chart, if applied - rendering is lagging as hell-->
-      <!--<td><app-chart [prices]="pair.historicalData"></app-chart></td>-->
+      <td><app-chart [prices]="pair.historicalData" [chartId]="'chartContainer' + pair.pairId"></app-chart></td>
       <td><button class="btn btn-danger btn-group-sm" (click)="deletePair(pair.pairId)">Delete</button></td>
     </tr>
   </tbody>
