--- a/CryptoRates/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CryptoRates/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">CryptoRates</a>
+      <a class="navbar-brand" [routerLink]="['/pairs']">CryptoRates</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -21,9 +21,6 @@
       >
         <app-login-menu></app-login-menu>
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/home']">Home</a>
-          </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/pairs']">Pairs</a>
           </li>
