--- a/CryptoRates/ClientApp/src/app/home/home.component.html
+++ b/CryptoRates/ClientApp/src/app/home/home.component.html
@@ -18,7 +18,7 @@
 
   <ng-template #toSignInSection>
     <h2>Lets get started!</h2>
-    <p>Basically, all the funtionality is on "Pairs" page, but first - you have to <button class="btn btn-outline-primary" [routerLink]='["/authentication/login"]'>Sign in</button></p>
+    <p>Basically, all the funtionality is on "Pairs" page, but first - you have to <button class="btn btn-outline-primary" [routerLink]='["/login"]'>Sign in</button></p>
   </ng-template>
 </body>
 </html>
