--- a/CryptoRates/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CryptoRates/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -19,10 +19,12 @@
         class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
         [ngClass]="{ show: isExpanded }"
       >
-        <app-login-menu></app-login-menu>
         <ul class="navbar-nav flex-grow">
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/pairs']">Pairs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-item nav-link" (click)="logout()">Logout</a>
           </li>
         </ul>
       </div>
