--- a/CryptoRates/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CryptoRates/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,7 +23,10 @@
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/pairs']">Pairs</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="isLoggedIn" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/profile']">Profile</a>
+          </li>
+          <li class="nav-item" *ngIf="isLoggedIn">
             <a class="nav-item nav-link" (click)="logout()">Logout</a>
           </li>
         </ul>
